# Frontier

./: .claw.json  .clawd-todos.json  .gitignore  CHECK_PACKAGE_STATUS.ps1  CODE_OF_CONDUCT.md  COMPLETION_VERIFICATION.md  CONTRIBUTING.md  CRONCREATE_DISABLE_COMPLETE.md  DEPLOYMENT_CHECKLIST.md  FINAL_STATUS_REPORT.md  FINAL_VERIFICATION_CHECKLIST.md  FIX_MULTIPLE_HEARTBEAT_TASKS.md  FRONTIER_ARCHITECTURE.md  Frontier.md  HEARTBEAT_API_FIX.md  HEARTBEAT_API_QUICK_FIX.md  HEARTBEAT_FIX_ACTION_ITEMS.md  HEARTBEAT_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LATEST_UPDATE.md  LICENSE  NEXT_STEPS.md  PACKAGE_UPDATE_STATUS.md  PACKAGE_UPDATE_SUMMARY.md  PHILOSOPHY.md  README.md  README_COMPLETION.md  REBUILD_INSTRUCTIONS.md  REBUILD_PACKAGE.ps1  ROADMAP.md  SECURITY.md  SESSION_PERSISTENCE_GUIDE.md  SESSION_PERSISTENCE_SUMMARY.md  STARTUP_ERROR_FIX.md  STARTUP_FIX_SUMMARY.md  START_HERE.md  SUMMARY.txt  TECHNICAL_REFERENCE.md  USAGE.md  USER_QUICK_FIX.md  (+23 more)
.claw/: a2a-agents.json  chatbox_history.json  chatbox_settings.json  settings.json
claw-web-chat/: .gitignore  README.md  package-lock.json  package.json
demo/: index.html  server.js
docs/: a2a-metrology-architecture.html  anti-slop-triage.md  frontier-a2a-architecture.html  g011-acp-json-rpc-status-contract.md  g012-final-release-readiness-report.md  navigation-file-context.md  (+4 more)
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: conversation.rs  file_ops.rs  hooks.rs  lib.rs  permissions.rs  prompt.rs  session.rs  sysinfo.rs
rust/crates/runtime/src/a2a/: client.rs  config.rs  delegate.rs  mod.rs  tools.rs
(+436 files in other folders)
